@@ -51,6 +51,7 @@ OTHER CHANGES:
   ConfigParser. (Phil)
 - Further changes to the data file formats, for consistency and ease of
   code/data maintenance.  (Phil)
+- Switched sounds to using data files, for smoother future expansion. (Phil)
 
 v0.26a (released 2007.08.12):
 
